# republicar-docs

./: LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml
docs/: backlog.md  classes.md  index.md  regras-negocio.md
